Updated Readme file

--- a/client/public/quiz.html
+++ b/client/public/quiz.html
@@ -20,5 +20,27 @@
       </div>
     </nav>
   </header>
+  <main>
+    <div class="quiz">
+      <div class="quiz_header">
+        <h1>QUESTION 1 OF 10</h1>
+      </div>
+      <div class="quiz_question">
+        <p>What is 2 multiplied by 2</p>
+      </div>
+      <div class="options">
+        <ul>
+          <li>4</li>
+          <li>3</li>
+          <li>5</li>
+          <li>i don't know</li>
+        </ul>
+      </div>
+      <div class="button_group">
+        <button class="prev">Prev</button>
+        <button class="next">Next</button>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
