--- a/client/public/quiz.html
+++ b/client/public/quiz.html
@@ -12,7 +12,7 @@
       <div class="nav_header">
         <img src="/assets/Blackbutter-logo.jpg" alt="Blackbutte Logo">
         <span>Calculator</span>
-        <div class="time">3:09</div>
+        <div class="time" id="timer"></div>
       </div>
       <div class="subjects">
         <span>Mathematics</span>
@@ -42,5 +42,7 @@
       </div>
     </div>
   </main>
+
+  <script src="/client/scripts/quiz.js"></script>
 </body>
 </html>
