--- a/client/public/quiz.html
+++ b/client/public/quiz.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exam</title>
   <link rel="stylesheet" href="/client/style/quiz.css">
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"/>
 </head>
 <body>
   <header>
